--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <p style="margin-top: 8px;margin-bottom: 8px; font-weight: bolder;"> Select</p>
             <select onchange="changeValue()" name="" id="sellect">
                 <option>---Select---</option>
-                <option value="1">300</option>
-                <option value="2">250</option>
-                <option value="3">200</option>
+                <option value="1">450</option>
+                <option value="2">300</option>
+                <option value="3">150-250</option>
+                <option value="5">125</option>
                 <option value="4">T37-400x55 SA30 TB2</option>
             </select>
             <p style=" margin-top: 8px; font-weight: bolder;"> Customize</p>
